--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
         <a href="scenario-tyler.html" class="btn-access">Voir le Scénario</a>
     </div> 
     -->
+    <!-- Scénario 2 -->
+    <div class="module-card">
+        <div class="module-info">
+            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
+            <p>Inventaires, ABC, et taux de rotation.</p>
+        </div>
+        <!-- Attention au nom exact du fichier ci-dessous -->
+        <a href="scenario12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
+    </div>
 
 
+    
 
