--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>Différence Fiche de poste/Annonce, Méthode STAR, Simulation d'entretien.</p>
         </div>
         <!-- Le lien ci-dessous doit correspondre au nom exact de votre fichier HTML sur GitHub -->
-        <a href="scenario-tsmel-recrutement.html" class="btn-access">Voir le Scénario</a>
+        <a href="at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
     </div>
 
     <!-- Exemple pour un futur scénario (à décommenter plus tard) -->
@@ -116,9 +116,10 @@
             <p>Inventaires, ABC, et taux de rotation.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
-        <a href="scenario12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
+        <a href="scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
     </div>
 
 
     
+
 
