--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
             <p>Inventaires, ABC, et taux de rotation.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
-        <a href="scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
+        <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
     </div>
 
 
     
+
 
 
