--- a/index.html
+++ b/index.html
@@ -118,9 +118,18 @@
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
     </div>
-
+<!-- Scénario 3 -->
+    <div class="module-card">
+        <div class="module-info">
+            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
+            <p>Inventaires, ABC, et taux de rotation.</p>
+        </div>
+        <!-- Attention au nom exact du fichier ci-dessous -->
+        <a href="mise_a_niveau_tosa_word.html" class="btn-access">Voir le Scénario</a>
+    </div>
 
     
+
 
 
 
