--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <!-- Scénario 3 -->
     <div class="module-card">
         <div class="module-info">
-            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
+            <h3><span class="tag tag-tsmel">TSMEL</span> TOSA-Word</h3>
             <p>Inventaires, ABC, et taux de rotation.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
@@ -129,6 +129,7 @@
     </div>
 
     
+
 
 
 
