--- a/index.html
+++ b/index.html
@@ -122,13 +122,14 @@
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL</span> TOSA-Word</h3>
-            <p>Inventaires, ABC, et taux de rotation.</p>
+            <p>tosa word.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="mise_a_niveau_tosa_word.html" class="btn-access">Voir le Scénario</a>
     </div>
 
     
+
 
 
 
