--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="scenario-tyler.html" class="btn-access">Voir le Scénario</a>
     </div> 
     -->
-    <!-- Scénario 2 -->
+    <!-- Scénario 2 : TSMEL Inventaires -->
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
@@ -118,17 +118,19 @@
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
     </div>
-<!-- Scénario 3 -->
+    -->
+<!-- Scénario 3  : Word -->
     <div class="module-card">
         <div class="module-info">
-            <h3><span class="tag tag-tsmel">TSMEL</span> TOSA-Word</h3>
-            <p>tosa word.</p>
+            <h3><span class="tag tag-tsmel">TSMEL</span> TOSA Word</h3>
+            <p>Mise à niveau word.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="mise_a_niveau_tosa_word.html" class="btn-access">Voir le Scénario</a>
     </div>
 
     
+
 
 
 
