--- a/index.html
+++ b/index.html
@@ -128,6 +128,27 @@
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="mise_a_niveau_tosa_word.html" class="btn-access">Voir le Scénario</a>
     </div>
+<!-- Scénario 4  : Word -->
+    <div class="module-card">
+        <div class="module-info">
+            <h3><span class="tag tag-tsmel">TSMEL</span> vac</h3>
+            <p> word.</p>
+        </div>
+        <!-- Attention au nom exact du fichier ci-dessous -->
+        <a href="voyages/annie-jacky-2026.html." class="btn-access">Voir le Scénario</a>
+    </div>
+
+    
+
+
+
+
+
+
+
+
+
+
 
     
 
