Fix HTML formatting and update scenario details

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 <!-- Scénario 4  : Word -->
     <div class="module-card">
         <div class="module-info">
-            <h3><span class="tag tag-tsmel">TSMEL</span> vac</h3>
+            <h3><span class="tag tag-tsmel">TSMEL</span> mise à niveau excel</h3>
             <p> word.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
-        <a href="voyages/annie-jacky-2026.html." class="btn-access">Voir le Scénario</a>
+        <a href="Scenario_Onze_Or.html" class="btn-access">Voir le Scénario</a>
     </div>
 
     
@@ -151,6 +151,7 @@
 
 
     
+
 
 
 
