--- a/index.html
+++ b/index.html
@@ -138,7 +138,15 @@
         <a href="Scenario_Onze_Or.html" class="btn-access">Voir le Scénario</a>
     </div>
 
-    
+    <!-- Scénario 5  : calculs commerciaux excel -->
+    <div class="module-card">
+        <div class="module-info">
+            <h3><span class="tag tag-tsmel">TSMEL/TLE </span> mise à niveau excel</h3>
+            <p> excel.</p>
+        </div>
+        <!-- Attention au nom exact du fichier ci-dessous -->
+        <a href="cours_logistique.html" class="btn-access">Voir le Scénario</a>
+    </div>
 
 
 
@@ -151,6 +159,7 @@
 
 
     
+
 
 
 
