Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="mise_a_niveau_tosa_word.html" class="btn-access">Voir le Scénario</a>
     </div>
-<!-- Scénario 4  : Word -->
+<!-- Scénario 4  : Mise à niveau excel 1-->
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL</span> mise à niveau excel</h3>
-            <p> word.</p>
+            <p> excel.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="Scenario_Onze_Or.html" class="btn-access">Voir le Scénario</a>
@@ -141,7 +141,7 @@
     <!-- Scénario 5  : calculs commerciaux excel -->
     <div class="module-card">
         <div class="module-info">
-            <h3><span class="tag tag-tsmel">TSMEL/TLE </span> mise à niveau excel</h3>
+            <h3><span class="tag tag-tsmel">TSMEL/TLE </span> Mise à niveau excel 2</h3>
             <p> excel.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
@@ -159,6 +159,7 @@
 
 
     
+
 
 
 
