--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bibliothèque de Scénarios - Sylvain GORECKI</title>
+    <title>Bibliothèque de Scénarios TSMEL - Sylvain GORECKI</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -132,17 +132,17 @@
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL</span> mise à niveau excel</h3>
-            <p> excel.</p>
+            <p>scénario le onze d'or.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="Scenario_Onze_Or.html" class="btn-access">Voir le Scénario</a>
     </div>
 
-    <!-- Scénario 5  : calculs commerciaux excel -->
+    <!-- Scénario 5  : Calculs commerciaux excel -->
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL/TLE </span> Mise à niveau excel 2</h3>
-            <p> excel.</p>
+            <p> Scénario Calculs commerciaux.</p>
         </div>
         <!-- Attention au nom exact du fichier ci-dessous -->
         <a href="cours_logistique.html" class="btn-access">Voir le Scénario</a>
@@ -159,6 +159,7 @@
 
 
     
+
 
 
 
