Fix HTML formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <a href="Scenario_Onze_Or.html" class="btn-access">Voir le Scénario</a>
     </div>
 
-    <!-- Scénario 5  : Calculs commerciaux excel -->
+    <!-- Scénario 5  : Calculs commerciaux excel 2 -->
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL/TLE </span> Mise à niveau excel 2</h3>
@@ -159,6 +159,7 @@
 
 
     
+
 
 
 
