--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 
 <div class="container">
-    <h1>📚 Bibliothèque Pédagogique</h1>
+    <h1>📚 Bibliothèque Pédagogique TSMEL</h1>
     <p class="intro">Retrouvez ici l'ensemble des scénarios et ressources de formation.<br>Formateur : Sylvain GORECKI</p>
 
     <!-- LISTE DES SCÉNARIOS -->
@@ -119,7 +119,7 @@
         <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
     </div>
     -->
-<!-- Scénario 3  : Word -->
+<!-- Scénario 3  : Mise à niveau Word -->
     <div class="module-card">
         <div class="module-info">
             <h3><span class="tag tag-tsmel">TSMEL</span> TOSA Word</h3>
@@ -159,6 +159,7 @@
 
 
     
+
 
 
 
