--- a/index.html
+++ b/index.html
@@ -232,8 +232,45 @@
                 </div>
         </details>
     </details>
+    <details class="at-drawer">
+        <summary class="at-header">Autres Scénarios & Ressources Diverses</summary>
+        
+        <div class="drawer-content">
+            
+            <div class="module-card">
+                <div class="module-info">
+                    <h3><span class="tag tag-fpa">Transversal</span> Soft Skills & Communication</h3>
+                    <p>Atelier sur la communication non-verbale en entrepôt.</p>
+                </div>
+                <a href="AUTRES/communication_non_verbale.html" class="btn-access">Ouvrir</a>
+            </div>
+
+            <div class="module-card">
+                <div class="module-info">
+                    <h3><span class="tag tag-tsmel">Outils</span> Glossaire Logistique</h3>
+                    <p>Liste des termes techniques et acronymes (WMS, TMS...).</p>
+                </div>
+                <a href="AUTRES/glossaire.html" class="btn-access">Ouvrir</a>
+            </div>
+
+            <details class="cp-drawer">
+                <summary class="cp-header">Archives / Anciens Cours</summary>
+                <div class="drawer-content">
+                    <div class="module-card">
+                        <div class="module-info">
+                            <h3>Vieux scénario 2023</h3>
+                            <p>Pour référence seulement.</p>
+                        </div>
+                        <a href="AUTRES/ARCHIVES/vieux_tp.html" class="btn-access">Ouvrir</a>
+                    </div>
+                </div>
+            </details>
+
+        </div>
+    </details>
 
 </div>
 
 </body>
 </html>
+
