--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
                     <p>Fiche de poste, Annonce, STAR.</p>
                 </div>
-                <a href="at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
+                <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
             </div>
 
             <div class="module-card">
@@ -228,3 +228,4 @@
 
 </body>
 </html>
+
