--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
             <details class="cp-drawer">
                 <summary class="cp-header">CP2 : Manager les équipes opérationnelles</summary>
                 <div class="drawer-content">
+                    <div class="module-card">
+    <div class="module-info">
+        <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
+        <p>Fiche de poste, Annonce, STAR.</p>
+    </div>
+    <a href="at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
+</div>
                     
                     <div class="module-card">
                         <div class="module-info">
@@ -232,3 +239,4 @@
 
 </body>
 </html>
+
