--- a/index.html
+++ b/index.html
@@ -142,17 +142,21 @@
                 </div>
             </details>
             
-            <details class="cp-drawer">
-                <summary class="cp-header">CP2 : Manager les équipes opérationnelles</summary>
-                <div class="drawer-content">
-                    <div class="module-card">
-    <div class="module-info">
-        <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
-        <p>Fiche de poste, Annonce, STAR.</p>
-    </div>
-    <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
-                </div>
-            </details>
+     <details class="cp-drawer">
+    <summary class="cp-header">CP2 : Manager les équipes opérationnelles</summary>
+    <div class="drawer-content">
+
+        <div class="module-card">
+            <div class="module-info">
+                <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
+                <p>Fiche de poste, Annonce, STAR.</p>
+            </div>
+            <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
+        </div>
+
+    </div> </details> ```
+
+**Astuce ultime :** Pour vérifier si votre changement est bien pris en compte sans le cache, ouvrez votre site dans une **fenêtre de navigation privée**. Si ça marche en privé, c'est qu'il suffisait de vider le cache !
             
             <details class="cp-drawer">
                 <summary class="cp-header">CP3 : Déterminer et exploiter les indicateurs (KPI)</summary>
@@ -229,6 +233,7 @@
 
 </body>
 </html>
+
 
 
 
