--- a/index.html
+++ b/index.html
@@ -153,7 +153,13 @@
             </div>
             <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
         </div>
-
+    <div class="module-card">
+            <div class="module-info">
+                <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
+                <p>RSE,Intégration RQTH, Entretiens individuel.</p>
+            </div>
+            <a href="AT1/Cp2/RSE_accueillir_un_rqth_entretien_individuel.html" class="btn-access">Voir le Scénario</a>
+        </div>
     </div> </details> ```
 
 **Astuce ultime :** Pour vérifier si votre changement est bien pris en compte sans le cache, ouvrez votre site dans une **fenêtre de navigation privée**. Si ça marche en privé, c'est qu'il suffisait de vider le cache !
@@ -233,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
