--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
                 <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
                 <p>Fiche de poste, Annonce, STAR.</p>
             </div>
+            <a href="AT1/Cp2/le_Pilotage_de_la Performance_et_la_Régulation_des_Activités_Logistiques" class="btn-access">Voir le Scénario</a>
+        </div>
+        
+        <div class="module-card">
+            <div class="module-info">
+                <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
+                <p>Fiche de poste, Annonce, STAR.</p>
+            </div>
             <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
         </div>
     <div class="module-card">
@@ -161,8 +169,6 @@
             <a href="AT1/Cp2/RSE_accueillir_un_rqth_entretien_individuel.html" class="btn-access">Voir le Scénario</a>
         </div>
     </div> </details> ```
-
-**Astuce ultime :** Pour vérifier si votre changement est bien pris en compte sans le cache, ouvrez votre site dans une **fenêtre de navigation privée**. Si ça marche en privé, c'est qu'il suffisait de vider le cache !
             
             <details class="cp-drawer">
                 <summary class="cp-header">CP3 : Déterminer et exploiter les indicateurs (KPI)</summary>
@@ -239,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
