--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 
         <div class="module-card">
             <div class="module-info">
-                <h3><span class="tag tag-tsmel">TSMEL</span> Recrutement & Intégration</h3>
-                <p>Fiche de poste, Annonce, STAR.</p>
+                <h3><span class="tag tag-tsmel">TSMEL</span> Pilotage performance</h3>
+                <p>Régulation,pilotage, disfonctionnements.</p>
             </div>
-            <a href="AT1/Cp2/le_Pilotage_de_la Performance_et_la_Régulation_des_Activités_Logistiques" class="btn-access">Voir le Scénario</a>
+            <a href="AT1/Cp2/le_Pilotage_de_la_Performance_et_la_Régulation_des_Activités_Logistiques" class="btn-access">Voir le Scénario</a>
         </div>
         
         <div class="module-card">
@@ -245,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
