--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             <a href="AT1/Cp2/RSE_accueillir_un_rqth_entretien_individuel.html" class="btn-access">Voir le Scénario</a>
         </div>
-    </div> </details> ```
+    </div> </details>
             
             <details class="cp-drawer">
                 <summary class="cp-header">CP3 : Déterminer et exploiter les indicateurs (KPI)</summary>
@@ -245,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
