--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
             </div>
             <a href="AT1/Cp2/le_Pilotage_de_la_Performance_et_la_Régulation_des_Activités_Logistiques.html" class="btn-access">Voir le Scénario</a>
         </div>
+        <div class="module-card">
+            <div class="module-info">
+                <h3><span class="tag tag-tsmel">TSMEL</span> Support de cours</h3>
+                <p> Pilotage et Régulation.</p>
+            </div>
+            <a href="AT1/Cp2/Support_de_Cours_Pilotage_et_Régulation.html" class="btn-access">Voir le Scénario</a>
+        </div>
         
         <div class="module-card">
             <div class="module-info">
@@ -245,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
