--- a/index.html
+++ b/index.html
@@ -134,9 +134,16 @@
                     <div class="module-card">
                         <div class="module-info">
                             <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
-                            <p>Inventaires, ABC, taux de rotation.</p>
+                            <p>Inventaires.</p>
                         </div>
                         <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
+                    </div>
+                          <div class="module-card">
+                        <div class="module-info">
+                            <h3><span class="tag tag-tsmel">TSMEL</span> Calcul des ETP</h3>
+                            <p>.Organiser et réguler les activités logistiques du site</p>
+                        </div>
+                        <a href="AT1/CP1/Calculs_des_ETP.html" class="btn-access">Voir le Scénario</a>
                     </div>
 
                 </div>
@@ -252,6 +259,7 @@
 
 </body>
 </html>
+
 
 
 
