--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
                         </div>
                         <a href="AT1/CP1/Calculs_des_ETP.html" class="btn-access">Voir le Scénario</a>
                     </div>
+                             <div class="module-card">
+                        <div class="module-info">
+                            <h3><span class="tag tag-tsmel">TSMEL</span> Ressource sur la réglemantation sociale en Logistique et calculs des ETP</h3>
+                            <p>.Organiser et réguler les activités logistiques du site</p>
+                        </div>
+                        <a href="AT1/CP1/logistique_gestion_temps_ressources.html" class="btn-access">Voir le Scénario</a>
+                    </div>
 
                 </div>
             </details>
@@ -259,6 +266,7 @@
 
 </body>
 </html>
+
 
 
 
