--- a/AT1/CP1/logistique_gestion_temps_ressources.html
+++ b/AT1/CP1/logistique_gestion_temps_ressources.html
@@ -651,7 +651,7 @@
                     </div>
 
                     <!-- NEW: CONSIGNES SECTION -->
-                    <h2 class="log-h2">3. Consignes & Travail à Réaliser</h2>
+                    <h2 class="log-h2">3. Consignes & Travail à Réaliser sur un fichier EXCEL OU GOOGLE SHEETS</h2>
                     
                     <div class="work-box border-l-4 border-blue-400">
                         <h3 class="font-bold text-blue-900 mb-2">Étape 1 : Le Planning (Temps)</h3>
