--- a/AT1/CP1/logistique_gestion_temps_ressources.html
+++ b/AT1/CP1/logistique_gestion_temps_ressources.html
@@ -652,7 +652,10 @@
 
                     <!-- NEW: CONSIGNES SECTION -->
                     <h2 class="log-h2">3. Consignes & Travail à Réaliser sur un fichier EXCEL OU GOOGLE SHEETS</h2>
-                    
+
+                     <div class="alert-box">
+                        🎯 <strong>Envoyez votre tableau à Formateur1.successformation@gmail.com :</strong> Commencez par calculer le volume total de lignes (450 x 2) avant de calculer le temps de travail.
+                    </div>
                     <div class="work-box border-l-4 border-blue-400">
                         <h3 class="font-bold text-blue-900 mb-2">Étape 1 : Le Planning (Temps)</h3>
                         <p class="text-sm text-gray-700 mb-2">Reproduisez et complétez ce tableau de calcul :</p>
