--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
     <summary class="cp-header">CP2 : Manager les équipes opérationnelles</summary>
     <div class="drawer-content">
 
+        </div>
+            <a href="AT1/Cp2/TCD_tableaux_de_bords" class="btn-access">Voir le Scénario</a>
+        </div>
+        
+        <div class="module-card">
+            <div class="module-info">
+                <h3><span class="tag tag-tsmel">TSMEL</span> pilotage performance</h3>
+                <p>TCD, KPI Excel Tableau de bord.</p>
+            </div>
+            <a href="AT1/Cp2/at1cp2TSMEL_20_01.html" class="btn-access">Voir le Scénario</a>
+        </div>
         <div class="module-card">
             <div class="module-info">
                 <h3><span class="tag tag-tsmel">TSMEL</span> Pilotage performance</h3>
@@ -266,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
