--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
                         </div>
                         <a href="Scenario-12-01-tsmel.html" class="btn-access">Voir le Scénario</a>
                     </div>
+                          <div class="module-card">
+                        <div class="module-info">
+                            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
+                            <p>Inventaires.</p>
+                        </div>
+                        <a href="Réaliser_et_mettre_en_œuvre_des Process.html" class="btn-access">Voir le Scénario</a>
+                    </div>
 
                     <div class="module-card">
                         <div class="module-info">
@@ -303,3 +310,4 @@
 
 </body>
 </html>
+
