--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                     </div>
                           <div class="module-card">
                         <div class="module-info">
-                            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stock</h3>
-                            <p>Inventaires.</p>
+                            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stoc processk</h3>
+                            <p>Process.</p>
                         </div>
-                        <a href="Réaliser_et_mettre_en_œuvre_des Process.html" class="btn-access">Voir le Scénario</a>
+                        <a href="Réaliser_et_mettre_en_œuvre_des_Process.html" class="btn-access">Voir le Scénario</a>
                     </div>
 
                     <div class="module-card">
@@ -310,4 +310,5 @@
 
 </body>
 </html>
+
 
