--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                     </div>
                           <div class="module-card">
                         <div class="module-info">
-                            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stoc processk</h3>
-                            <p>Process.</p>
+                            <h3><span class="tag tag-tsmel">TSMEL</span> Gestion de Stocks process</h3>
+                            <p>Process et logigramme.</p>
                         </div>
                         <a href="AT1/CP1/Réaliser_et_mettre_en_œuvre_des_Process.html" class="btn-access">Voir le Scénario</a>
                     </div>
@@ -310,6 +310,7 @@
 
 </body>
 </html>
+
 
 
 
